[package]
name = "rust-liquid-melt"
version = "0.0.1-dev"
authors = ["Valerio Vaccaro <rust@valeriovaccaro.it>"]
edition = "2018"
license = "MIT"
homepage = ""
repository = "https://github.com/valerio-vaccaro/rust-liquid-melt"
documentation = "https://github.com/valerio-vaccaro/rust-liquid-melt"
description = ""
keywords = ["Liquid", "Minikey"]
readme = "README.md"

[[bin]]
name = "derive"
path = "src/derive.rs"

[dependencies]
bitcoin = "0.26.0"
elements = "0.17"
bip39 = "1.0.1"
regex = "1"
qrcode = "0.12.0"
clap = "2.33.3"
colored = "2"
rand = "0.8.3"
